# YiSphere

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  start.sh
app/: __init__.py  prompts.py
app/services/: __init__.py  bazi.py  calendar.py  chat.py  huangli.py  iching.py
static/: index.html
